--- a/pom.xml
+++ b/pom.xml
@@ -30,30 +30,50 @@
     <name>Handlebars Helpers</name>
 
     <properties>
-        <handlebars-version>4.0.1</handlebars-version>
-        <lombok-version>4.0.1</lombok-version>
-        <petrovich-version>4.0.1</petrovich-version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <lombok.version>1.16.6</lombok.version>
+        <handlebars.version>4.0.1</handlebars.version>
+        <petrovich.version>1.0.2</petrovich.version>
+        <junit.version>4.12</junit.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
             <groupId>com.github.jknack</groupId>
             <artifactId>handlebars</artifactId>
-            <version>${handlebars-version}</version>
+            <version>${handlebars.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.petrovich4j</groupId>
             <artifactId>petrovich4j</artifactId>
-            <version>1.0.2</version>
+            <version>${petrovich.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
