--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,22 @@
     <packaging>jar</packaging>
 
     <name>Handlebars Helpers</name>
+    <url>https://github.com/ukase/handlebars-helpers</url>
+    <description>Project with some helpers for Handlebars engine</description>
+    <scm>
+        <url>https://github.com/ukase/handlebars-helpers.git</url>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
     <developers>
         <developer><name>Pavel Uvarov</name><url>https://github.com/webkumo</url></developer>
     </developers>
-    <url>https://github.com/ukase/handlebars-helpers</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -68,7 +80,6 @@
             <groupId>com.github.petrovich4j</groupId>
             <artifactId>petrovich4j</artifactId>
             <version>${petrovich.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
