prepare releases to OOSRH

--- a/src/main/resources/imported-handlers.properties
+++ b/src/main/resources/imported-handlers.properties
@@ -17,5 +17,5 @@
 # along with this program. If not, see <http://www.apache.org/licenses/>.
 #
 
-petrovich=me.entresol.helpers.PetrovichHelper
-equals=me.entresol.helpers.EqualsHelper
+petrovich=com.github.ukase.helpers.PetrovichHelper
+equals=com.github.ukase.helpers.EqualsHelper
