--- a/src/main/resources/imported-handlers.properties
+++ b/src/main/resources/imported-handlers.properties
@@ -19,3 +19,4 @@
 
 petrovich=com.github.ukase.helpers.PetrovichHelper
 equals=com.github.ukase.helpers.EqualsHelper
+in=com.github.ukase.helpers.InHelper
